# v1nage

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  config.yml.template  go.mod  go.sum  v1nage.service
.github/workflows/: release.yml
cmd/v1nage/: main.go
cmd/waatcher/: main.go
docs/: service.md
pkg/config/: config.go
pkg/eurocore/: eurocore.go
pkg/ns/: ns.go
pkg/sse/: sse.go
pkg/utils/: utils.go
pkg/webhook/: webhook.go
src/: main.rs
