[package]
name = "waatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
eventsource-client = "0.14.0"
futures = "0.3.31"
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros"] }